--- a/src/pages/alternatives.module.scss
+++ b/src/pages/alternatives.module.scss
@@ -24,7 +24,7 @@
 }
 
 .quote {
-    margin: 2rem -12.5% 0;
+    margin: 2rem 0 0;
     padding: 2.5em 1em 1em;
     text-align: center;
 }
